--- a/templates/conventions/selection.html
+++ b/templates/conventions/selection.html
@@ -9,29 +9,61 @@
                     <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w">
                         <h2 class="fr-mb-3w">Etape {{convention_form_step}}/{{ nb_steps }} - Choix du programme à conventionner</h2>
                         {% include "common/mandatory_fields_info.html" %}
-                        <p class="fr-mb-3w">
-                            <div class="fr-select-group{% if form.lot_uuid.errors %} fr-select-group--error{% endif %}">
-                                <label class="fr-label" for="{{form.lot_uuid.id_for_label}}">
-                                    Séléctionnez votre programme et son financement {% include "common/mandatory_field.html" with form_input=form.lot_uuid %}
-                                </label>
-                                <select class="fr-select {% if form.lot_uuid.errors %}fr-select--error{% endif %}" id="lot_uuid" name="lot_uuid" {% if not editable %}disabled{% endif %}>
-                                    <option value="" selected disabled hidden>Selectionnez une option</option>
-                                    {% for lot in programmes %}
-                                        <option
-                                            value="{{lot.uuid}}"
-                                            {% if lot.uuid|stringformat:"s"  == form.lot_uuid.value %}selected{% endif %}
-                                            {% if lot.convention_set.all and lot.uuid|stringformat:"s"  != form.lot_uuid.value %}disabled="disabled"{% endif %}>
-                                            {{ lot.programme.ville}} - {{ lot.programme.nom }} - {{lot.nb_logements}} lgts - {{ lot.financement }}
-                                        </option>
-                                    {% endfor %}
-                                </select>
-                                {% for error in form.lot_uuid.errors %}
-                                    <p id="select-error-desc-error" class="fr-error-text">
-                                        {{ error }}
-                                    </p>
-                                {% endfor %}
-                            </div>
-                        </p>
+
+                        <div class="fr-mb-3w fr-form-group">
+                            <fieldset class="fr-fieldset">
+                                <div class="fr-fieldset__content">
+                                    <div class="fr-radio-group">
+                                        <input
+                                            type="radio"
+                                            id="selection"
+                                            name="{{form.existing_programme.html_name}}"
+                                            checked
+                                            onclick="conv_mode(true)">
+                                        <label class="fr-label" for="selection">
+                                            Séléctionnez votre programme et son financement {% include "common/mandatory_field.html" with form_input=form.lot_uuid %}
+                                        </label>
+                                    </div>
+
+                                    <div id='programme_selection' class="fr-ml-4w fr-select-group{% if form.lot_uuid.errors %} fr-select-group--error{% endif %}">
+                                        <select class="fr-select {% if form.lot_uuid.errors %}fr-select--error{% endif %}" id="lot_uuid" name="lot_uuid" {% if not editable %}disabled{% endif %}>
+                                            <option value="" selected disabled hidden>Selectionnez une option</option>
+                                            {% for lot in programmes %}
+                                                <option
+                                                    value="{{lot.uuid}}"
+                                                    {% if lot.uuid|stringformat:"s"  == form.lot_uuid.value %}selected{% endif %}
+                                                    {% if lot.convention_set.all and lot.uuid|stringformat:"s"  != form.lot_uuid.value %}disabled="disabled"{% endif %}>
+                                                    {{ lot.programme.ville}} - {{ lot.programme.nom }} - {{lot.nb_logements}} lgts - {{ lot.financement }}
+                                                </option>
+                                            {% endfor %}
+                                        </select>
+                                        {% for error in form.lot_uuid.errors %}
+                                            <p id="select-error-desc-error" class="fr-error-text">
+                                                {{ error }}
+                                            </p>
+                                        {% endfor %}
+                                    </div>
+
+
+                                    <div class="fr-radio-group">
+                                        <input
+                                            type="radio"
+                                            id="creation"
+                                            name="{{form.existing_programme.html_name}}"
+                                            onclick="conv_mode(false)">
+                                        <label class="fr-label" for="creation">Vous n'avez pas trouvé le programme à conventionner dans la liste déroulante ? Créez votre convention à partir de zéro
+                                        </label>
+                                    </div>
+                                    <div id='programme_creation' hidden>
+                                        PROGRAMME CREATION
+                                    </div>
+                                </div>
+                            </fieldset>
+                        </div>
+
+
+
+
                     </div>
                 </div>
                 <div class="form-button-footer fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-py-5w">
@@ -51,4 +83,11 @@
             </form>
         </div>
     </div>
+    <script>
+        function conv_mode(is_select) {
+            document.getElementById('programme_selection').hidden = !is_select
+            document.getElementById('programme_creation').hidden = is_select
+        }
+    </script>
+
 {% endblock %}
