--- a/templates/common/form/input_text.html
+++ b/templates/common/form/input_text.html
@@ -17,8 +17,8 @@
             value="{{ form_input.value|default_if_none:'' }}"
             {% if not editable %}disabled{% endif %}>
         {% if object_field %}
-            <div id='{{form_input.id_for_label}}_comment' {% if object_field not in comments %}hidden{% endif %}>
-                <div class="content__icons {% if object_field in comments %}content__icons--red{% else %}content__icons--blue{% endif %} fr-px-1w"
+            <div id='{{form_input.id_for_label}}_comment' hidden>
+                <div class="content__icons fr-px-1w"
                     id="{{form_input.id_for_label}}_comment-img"
                     data-fr-opened="false"
                     aria-controls="{{form_input.id_for_label}}_comment-dialog">
@@ -61,7 +61,7 @@
                                     type="text"
                                     id="{{form_input.id_for_label}}_comment-textarea"
                                     name="{{form_input.html_name}}_comment-textarea"
-                                    rows="5">{{ comment.message }}</textarea>
+                                    rows="5"></textarea>
                                 <ul class="fr-mt-1w fr-btns-group fr-btns-group--right fr-btns-group--inline-reverse fr-btns-group--inline-lg fr-btns-group--icon-left fr-btns-group--sm">
                                     <li>
                                         <button id='{{form_input.id_for_label}}_comment-submit' type="button" class="fr-btn fr-btn--sm">
@@ -83,7 +83,6 @@
     </dialog>
 
     {% for comment in comments|get_item:object_field %}
-
         <script>
             create_comment_input('{{form_input.id_for_label}}',{
                 username: '{{comment.user}}',
@@ -92,21 +91,13 @@
                 uuid: '{{comment.uuid}}',
                 message: '{{comment.message}}',
                 statut: '{{comment.statut}}',
-            }, '{{ comments|get_item:object_field|has_own_comment:request.user.id }}');
+            }, '{{ comments|get_item:object_field|has_own_active_comment:request.user.id }}');
         </script>
-
     {% endfor %}
 
-    {% if object_field not in comments %}
-        <script>
-            document.getElementById('{{form_input.id_for_label}}_div').onmouseover = function() {
-                document.getElementById('{{form_input.id_for_label}}_comment').hidden=false
-            }
-            document.getElementById('{{form_input.id_for_label}}_div').onmouseleave = function(){
-                document.getElementById('{{form_input.id_for_label}}_comment').hidden=true
-            }
-        </script>
-    {% endif %}
+    <script>
+        display_comment_icon('{{form_input.id_for_label}}', {% if object_field in comments %}true{% else %}false{% endif %})
+    </script>
 
 
 {% endif %}
