--- a/templates/conventions/bailleur.html
+++ b/templates/conventions/bailleur.html
@@ -3,50 +3,17 @@
 {% block page_title %}Bailleur - APiLos{% endblock%}
 {% block javascript_extras %}
     <script>
-        function create_comment(input_id, object_field) {
-            var [object_name, object_field] = object_field.split('__')
-            comment = document.getElementById(input_id+ '_comment-textarea').value
-            csrf_token = document.getElementsByName('csrfmiddlewaretoken')[0].value
 
-            var headers = {
-                'X-CSRFToken': csrf_token,
-                'Accept': 'application/json',
-                'Content-Type': 'application/json'
-            }
-
-            fetch('/comments/', {
-                method: 'post',
-                headers: headers,
-                body: JSON.stringify({
-                    comment: comment,
-                    object : object_name,
-                    field : object_field,
-                    convention_uuid : '{{convention.uuid}}'
-                })
-            }).then(function(response) {
-                if (response.status == 200) {
-                    res = response.json()
-                    return res;
-                }
-            }).then(res => {
-                create_comment_input(input_id, res.comment)
-                console.log(res)
-            });
-
-            // Close the dialogbox
-            //document.getElementById(input_id + '_comment-img').setAttribute('data-fr-opened',false)
-        }
-
-        function create_comment_input(input_id, comment, has_own_comment=true) {
+        function create_comment_input(input_id, comment, has_own_active_comment=true) {
             var before_id = input_id + "_new_comment"
             var comment_modal_id = input_id + "_modal_comment"
             new_comment_block = document.getElementById(before_id)
-            if (has_own_comment && has_own_comment != 'False') {
+            if (has_own_active_comment && has_own_active_comment != 'False') {
                 new_comment_block.hidden = true
             }
             const owner_div = create_comment_owner(comment.username, comment.is_owner);
             document.getElementById(comment_modal_id).insertBefore( owner_div, new_comment_block );
-            const date_div = create_comment_date(comment.mis_a_jour_le);
+            const date_div = create_comment_date(comment.uuid,comment.mis_a_jour_le);
             document.getElementById(comment_modal_id).insertBefore( date_div, new_comment_block );
             const uuid_div = create_comment_uuid(comment.uuid);
             document.getElementById(comment_modal_id).insertBefore( uuid_div, new_comment_block );
@@ -54,7 +21,7 @@
             document.getElementById(comment_modal_id).insertBefore( textarea_div, new_comment_block );
             const ul_buttons = create_comment_button(comment.uuid)
             document.getElementById(comment_modal_id).insertBefore( ul_buttons, new_comment_block );
-            init_comment_button(comment.uuid, comment.statut, comment.is_owner, '{{request.user.is_instructeur}}')
+            init_comment_button(input_id, comment.uuid, comment.statut, comment.is_owner, '{{request.user.is_instructeur}}')
         }
 
         //<div class="fr-mt-3w"><b>Raphaëlle Neyton (vous) :</b></div>
@@ -71,8 +38,9 @@
         }
 
         //<div class="fr-text-sm text-italic"><i>le 3 novembre 2021 12:06</i></div>
-        function create_comment_date(date) {
+        function create_comment_date(uuid, date) {
             const date_div = document.createElement('div');
+            date_div.setAttribute('id','comment_date_' + uuid)
             date_div.classList.add('fr-text-sm')
             date_div.classList.add('text-italic')
             date_div.innerText = "le " + date
@@ -93,7 +61,7 @@
             textarea_div.classList.add('fr-input')
             textarea_div.setAttribute('aria-describedby', "text-input-error-desc-error")
             textarea_div.setAttribute('type', "text")
-            if (is_owner && is_owner != 'False' && status != 'CLOS') {
+            if (is_owner && is_owner != 'False' && status == 'OUVERT') {
                 textarea_div.disabled = false
             }
             else {
@@ -105,16 +73,15 @@
             return textarea_div
         }
 
-        function disable_textarea(uuid, statut, is_owner) {
+        function disable_textarea(uuid, status, is_owner) {
             const textarea_div = document.getElementById("comment_" + uuid)
-            if (is_owner && is_owner != 'False' && statut != 'CLOS') {
+            if (is_owner && is_owner != 'False' && status == 'OUVERT') {
                 textarea_div.disabled = false
             }
             else {
                 textarea_div.disabled = true
             }
         }
-
 
         // <ul class="fr-mt-1w fr-btns-group fr-btns-group--right fr-btns-group--inline-reverse fr-btns-group--inline-lg fr-btns-group--icon-left fr-btns-group--sm">
         //     <li id="block_comment_close_96c201c0-c0ce-4400-9b73-09803961e6a1" class="button-hidden">
@@ -152,8 +119,30 @@
         }
 
 
+        function display_comment_icon(input_id, has_comments) {
+            if (has_comments) {
+                comment_icon = document.getElementById(input_id + '_comment')
+                comment_icon.classList.remove('content__icons--blue')
+                comment_icon.classList.add('content__icons--red')
+                document.getElementById(input_id + '_div').onmouseover = null
+                document.getElementById(input_id + '_div').onmouseleave = null
+                comment_icon.hidden = false
+            }
+            else {
+                comment_icon = document.getElementById(input_id + '_comment')
+                comment_icon.classList.remove('content__icons--red')
+                comment_icon.classList.add('content__icons--blue')
+                document.getElementById(input_id + '_div').onmouseover = function() {
+                    document.getElementById(input_id + '_comment').hidden=false
+                }
+                document.getElementById(input_id + '_div').onmouseleave = function(){
+                    document.getElementById(input_id + '_comment').hidden=true
+                }
+            }
+        }
 
-        function init_comment_button(uuid, comment_statut, is_owner, is_instructeur) {
+
+        function init_comment_button(input_id, uuid, comment_statut, is_owner, is_instructeur) {
             // button 'Marquer comme clos'
             if (is_instructeur == 'True' && comment_statut != 'CLOS') {
                 document.getElementById('block_comment_close_' + uuid).classList.remove('button-hidden')
@@ -162,7 +151,7 @@
                 document.getElementById('block_comment_close_' + uuid).classList.add('button-hidden')
             }
             document.getElementById('comment_close_' + uuid).onclick = function() {
-                update_status_comment(uuid, 'CLOS')
+                update_status_comment(input_id, uuid, 'CLOS')
             }
 
             // button 'Marquer comme résolu'
@@ -173,7 +162,7 @@
                 document.getElementById('block_comment_resolve_' + uuid).classList.add('button-hidden')
             }
             document.getElementById('comment_resolve_' + uuid).onclick = function() {
-                update_status_comment(uuid, 'RESOLU')
+                update_status_comment(input_id, uuid, 'RESOLU')
             }
 
             // button 'Ré-ouvrir'
@@ -184,7 +173,7 @@
                 document.getElementById('block_comment_reopen_' + uuid).classList.add('button-hidden')
             }
             document.getElementById('comment_reopen_' + uuid).onclick = function() {
-                update_status_comment(uuid, 'OUVERT')
+                update_status_comment(input_id, uuid, 'OUVERT')
             }
 
             // button 'Enregistrer'
@@ -227,6 +216,7 @@
                 }
             }).then(res => {
                 create_comment_input(input_id, res.comment)
+                display_comment_icon(input_id, true)
                 console.log(res)
             });
 
@@ -255,13 +245,21 @@
                 if (response.status == 200) {
                     return response.json();
                 }
-            }).then(res => console.log(res));
+            }).then(res => {
+                if (res.success) {
+                    document.getElementById('comment_date_' + uuid).innerText = 'le ' + res.comment.mis_a_jour_le + ' (Enregistré)'
+                    setTimeout(function(){
+                        document.getElementById('comment_date_' + uuid).innerText = 'le ' + res.comment.mis_a_jour_le
+                    }, 5000);
+                    console.log(res)
+
+                }
+            });
         }
 
 
-
         // Reopen an existing comment
-        function update_status_comment(uuid, status) {
+        function update_status_comment(input_id, uuid, status) {
             message = document.getElementById("comment_" + uuid).value
             csrf_token = document.getElementsByName('csrfmiddlewaretoken')[0].value
 
@@ -285,8 +283,11 @@
                 if (res.success)
                 {
                     var comment = res.comment
-                    init_comment_button(comment.uuid, comment.statut, comment.is_owner, '{{request.user.is_instructeur}}')
+                    init_comment_button(input_id, comment.uuid, comment.statut, comment.is_owner, '{{request.user.is_instructeur}}')
                     disable_textarea(comment.uuid, comment.statut, comment.is_owner)
+                    if (comment.is_owner && comment.statut == 'CLOS') {
+                        document.getElementById(input_id + "_new_comment").hidden = false
+                    }
                 }
             });
         }
