--- a/templates/conventions/cadastre.html
+++ b/templates/conventions/cadastre.html
@@ -52,27 +52,25 @@
 
                         {% include "common/form/input_upload.html" with label="Vendeur" form_input=form.vendeur form_input_files=form.vendeur_files object_name='programme' object_uuid=convention.programme.uuid textarea=True image_only=True file_list=convention.programme.vendeur_files.values mandatory=True object_field="programme__vendeur" %}
 
-                        {% include "common/form/input_upload.html" with label="Acquéreur" form_input=form.acquereur form_input_files=form.acquereur_files object_name='programme' object_uuid=convention.programme.uuid textarea=True image_only=True file_list=convention.programme.acquereur_files.values mandatory=True %}
+                        {% include "common/form/input_upload.html" with label="Acquéreur" form_input=form.acquereur form_input_files=form.acquereur_files object_name='programme' object_uuid=convention.programme.uuid textarea=True image_only=True file_list=convention.programme.acquereur_files.values mandatory=True object_field="programme__acquereur" %}
 
-                        {% include "common/form/input_upload.html" with label="Référence du notaire" form_input=form.reference_notaire form_input_files=form.reference_notaire_files object_name='programme' object_uuid=convention.programme.uuid textarea=True image_only=True file_list=convention.programme.reference_notaire_files.values %}
+                        {% include "common/form/input_upload.html" with label="Référence du notaire" form_input=form.reference_notaire form_input_files=form.reference_notaire_files object_name='programme' object_uuid=convention.programme.uuid textarea=True image_only=True file_list=convention.programme.reference_notaire_files.values object_field="programme__reference_notaire" %}
 
-                        {% include "common/form/input_upload.html" with label="Référence de publication de l'acte" form_input=form.reference_publication_acte form_input_files=form.reference_publication_acte_files object_name='programme' object_uuid=convention.programme.uuid textarea=True image_only=True file_list=convention.programme.reference_publication_acte_files.values %}
+                        {% include "common/form/input_upload.html" with label="Référence de publication de l'acte" form_input=form.reference_publication_acte form_input_files=form.reference_publication_acte_files object_name='programme' object_uuid=convention.programme.uuid textarea=True image_only=True file_list=convention.programme.reference_publication_acte_files.values object_field="programme__reference_publication_acte" %}
 
                         <div class="fr-grid-row fr-grid-row--gutters">
                             <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                {% include "common/form/input_upload.html" with label="Acte de propriété" form_input=form.acte_de_propriete form_input_files=form.acte_de_propriete_files object_name='programme' object_uuid=convention.programme.uuid file_list=convention.programme.acte_de_propriete_files.values %}
+                                {% include "common/form/input_upload.html" with label="Acte de propriété" form_input=form.acte_de_propriete form_input_files=form.acte_de_propriete_files object_name='programme' object_uuid=convention.programme.uuid file_list=convention.programme.acte_de_propriete_files.values object_field="programme__acte_de_propriete" %}
                             </div>
                             <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                {% include "common/form/input_upload.html" with label="Acte notarial" form_input=form.acte_notarial form_input_files=form.acte_notarial_files  object_name='programme' object_uuid=convention.programme.uuid file_list=convention.programme.acte_notarial_files.values %}
+                                {% include "common/form/input_upload.html" with label="Acte notarial" form_input=form.acte_notarial form_input_files=form.acte_notarial_files  object_name='programme' object_uuid=convention.programme.uuid file_list=convention.programme.acte_notarial_files.values object_field="programme__acte_notarial" %}
                             </div>
                         </div>
 
 
                         <hr class="fr-col-12 fr-my-3w">
 
-                        <h4>Références cadastrales</h4>
-
-                        {% include "common/form/input_upload.html" with form_input=form.reference_cadastrale form_input_files=form.reference_cadastrale_files object_name='programme' object_uuid=convention.programme.uuid image_only=True file_list=convention.programme.reference_cadastrale_files.values %}
+                        {% include "common/form/input_upload.html" with label="Références cadastrales" form_input=form.reference_cadastrale form_input_files=form.reference_cadastrale_files object_name='programme' object_uuid=convention.programme.uuid image_only=True file_list=convention.programme.reference_cadastrale_files.values object_field="programme__reference_cadastrale" %}
 
                         {% if editable %}
                             {% include "common/form/download_upload_form.html" with convention_uuid=convention.uuid file_type='cadastre' upform=upform  what="références cadastrales"%}
@@ -100,23 +98,34 @@
                                         <th scope="col">Numéro {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
                                         <th scope="col">Lieudit {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
                                         <th scope="col">Surface {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
+                                        {% if convention.statut != 'BROUILLON' %}
+                                            <th scope="col">Comments</th>
+                                        {% endif %}
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    {% for form_pret in formset %}
+                                    {% for form_cadastre in formset %}
                                         <tr>
                                             <td>
-                                                {% include "common/form/input_text.html" with form_input=form_pret.section %}
+                                                {% include "common/form/input_text.html" with form_input=form_cadastre.section %}
                                             </td>
                                             <td>
-                                                {% include "common/form/input_text.html" with form_input=form_pret.numero %}
+                                                {% include "common/form/input_text.html" with form_input=form_cadastre.numero %}
                                             </td>
                                             <td>
-                                                {% include "common/form/input_text.html" with form_input=form_pret.lieudit %}
+                                                {% include "common/form/input_text.html" with form_input=form_cadastre.lieudit %}
                                             </td>
                                             <td>
-                                                {% include "common/form/input_text.html" with form_input=form_pret.surface %}
+                                                {% include "common/form/input_text.html" with form_input=form_cadastre.surface %}
                                             </td>
+                                            {% if convention.statut != 'BROUILLON' %}
+                                                {% with input_id="reference_cadastrale_"|add:form_cadastre.uuid.value object_field="reference_cadastrale__"|add:form_cadastre.uuid.value %}
+                                                    <td id="{{form_cadastre.uuid.id_for_label}}_div">
+                                                        {% include "common/comment_icon.html" with form_input=form_cadastre.uuid object_field=object_field comments=comments %}
+                                                        {% include "common/comment_dialog.html" with form_input=form_cadastre.uuid convention=convention object_field=object_field comments=comments %}
+                                                    </td>
+                                                {% endwith %}
+                                            {% endif %}
                                         </tr>
                                     {% endfor %}
                                 </tbody>
