--- a/templates/conventions/selection.html
+++ b/templates/conventions/selection.html
@@ -1,6 +1,12 @@
 {% extends "layout/base.html" %}
 
+{% load static %}
+
 {% block page_title %}Selection - APiLos{% endblock%}
+
+{% block javascript_extras %}
+    <script src="{% static "js/comment-block.js" %}" nonce="{{request.csp_nonce}}"></script>
+{% endblock %}
 
 {% block content %}
     <div class="fr-container-fluid ds_banner">
@@ -34,23 +40,31 @@
                                         });
                                     </script>
 
-                                    <div id='programme_selection' class="fr-ml-4w fr-select-group{% if form.lot_uuid.errors %} fr-select-group--error{% endif %}"  {% if form.existing_programme.value != 'selection' %}hidden{% endif %}>
-                                        <select class="fr-select {% if form.lot_uuid.errors %}fr-select--error{% endif %}" id="lot_uuid" name="lot_uuid" {% if not editable %}disabled{% endif %}>
-                                            <option value="" selected disabled hidden>Selectionnez une option</option>
-                                            {% for lot in programmes %}
-                                                <option
-                                                    value="{{lot.uuid}}"
-                                                    {% if lot.uuid|stringformat:"s"  == form.lot_uuid.value %}selected{% endif %}
-                                                    {% if lot.convention_set.all and lot.uuid|stringformat:"s"  != form.lot_uuid.value %}disabled="disabled"{% endif %}>
-                                                    {{ lot.programme.ville}} - {{ lot.programme.nom }} - {{lot.nb_logements}} lgts - {{ lot.financement }}
-                                                </option>
-                                            {% endfor %}
-                                        </select>
+                                    <div id='programme_selection' class="fr-ml-4w fr-select-group {% if form.lot_uuid.errors %}fr-select-group--error{% endif %}"  {% if form.existing_programme.value != 'selection' %}hidden{% endif %}>
+                                        <div class="fr-mt-1w block--row-strech" id="{{form.lot_uuid.id_for_label}}_div">
+                                            <select class="fr-select {% if form.lot_uuid.errors %}fr-select--error{% endif %}" id="lot_uuid" name="lot_uuid" {% if not editable %}disabled{% endif %}>
+                                                <option value="" selected disabled hidden>Selectionnez une option</option>
+                                                {% for lot in programmes %}
+                                                    <option
+                                                        value="{{lot.uuid}}"
+                                                        {% if lot.uuid|stringformat:"s"  == form.lot_uuid.value %}selected{% endif %}
+                                                        {% if lot.convention_set.all and lot.uuid|stringformat:"s"  != form.lot_uuid.value %}disabled="disabled"{% endif %}>
+                                                        {{ lot.programme.ville}} - {{ lot.programme.nom }} - {{lot.nb_logements}} lgts - {{ lot.financement }}
+                                                    </option>
+                                                {% endfor %}
+                                            </select>
+                                            {% if convention %}
+                                                {% include "common/comment_icon.html" with form_input=form.lot_uuid object_field="lot__uuid" comments=comments %}
+                                            {% endif %}
+                                        </div>
                                         {% for error in form.lot_uuid.errors %}
                                             <p id="select-error-desc-error" class="fr-error-text">
                                                 {{ error }}
                                             </p>
                                         {% endfor %}
+                                        {% if convention %}
+                                            {% include "common/comment_dialog.html" with form_input=form.lot_uuid convention=convention object_field="lot__uuid" comments=comments %}
+                                        {% endif %}
                                     </div>
 
                                     {% if not convention.uuid %}
