--- a/templates/emails/welcome_user.html
+++ b/templates/emails/welcome_user.html
@@ -9,7 +9,9 @@
     <li>Mot de passe : {{ password }}</li>
 </ul>
 
-<p>Pour vous connecter, clickez sur le lien <a href="{{login_url}}">APiLos</a></p>
+<p>Pour vous connecter, cliquez sur le lien <a href="{{login_url}}">APiLos</a></p>
+
+<p>Si le lien ne fonctionne pas, nous vous prions de copier et coller cette adresse dans le nagigateur de votre choix : {{login_url}}</p>
 
 <p>Dans l'attente de vous retrouver sur APiLos pour une nouvelle convention, nous restons à votre disposition.</p>
 
