--- a/templates/settings/edit_user.html
+++ b/templates/settings/edit_user.html
@@ -140,6 +140,9 @@
                             {% include 'settings/add_bailleur_to_user.html' %}
                         </div>
                     {% endif %}
+                    {% if request.user.is_superuser %}
+                        {% include 'settings/delete_user.html' %}
+                    {% endif %}
 
                 </div>
             </div>
