--- a/templates/settings/user_list.html
+++ b/templates/settings/user_list.html
@@ -46,26 +46,28 @@
         </thead>
         <tbody>
             {% for user in users %}
-                <tr>
-                    <td>
-                        {{ user.username}}
-                        {% if user.is_administrator %}
-                            <em class="fr-text--light fr-text--sm">(Admin)</em>
-                        {% endif %}
-                    </td>
-                    <td>{{ user.first_name}}</td>
-                    <td>{{ user.last_name}}</td>
-                    <td>{{ user.email}}</td>
-                    {% if not read_only%}
+                {% if user.username%}
+                    <tr>
                         <td>
-                            {% if request.user|is_administrator:user %}
-                                <a class="fr-link fr-mb-1w" href="{% url 'settings:edit_user' username=user.username %}" >
-                                    <span class="fr-fi-edit-line" aria-hidden="true"></span>
-                                </a>
+                            {{ user.username}}
+                            {% if user.is_administrator %}
+                                <em class="fr-text--light fr-text--sm">(Admin)</em>
                             {% endif %}
                         </td>
-                    {% endif %}
-                </tr>
+                        <td>{{ user.first_name}}</td>
+                        <td>{{ user.last_name}}</td>
+                        <td>{{ user.email}}</td>
+                        {% if not read_only%}
+                            <td>
+                                {% if request.user|is_administrator:user %}
+                                    <a class="fr-link fr-mb-1w" href="{% url 'settings:edit_user' username=user.username %}" >
+                                        <span class="fr-fi-edit-line" aria-hidden="true"></span>
+                                    </a>
+                                {% endif %}
+                            </td>
+                        {% endif %}
+                    </tr>
+                {% endif %}
             {% endfor %}
         </tbody>
     </table>
