--- a/templates/conventions/actions/instructeur_validation.html
+++ b/templates/conventions/actions/instructeur_validation.html
@@ -65,4 +65,14 @@
         </div>
     </div>
 {% endif %}
+{% if request|is_instructeur and convention.display_options.display_is_resiliated %}
+
+    <div class="fr-col-md-12 fr-py-5w">
+        <div role="alert" class="fr-alert fr-alert--warning">
+
+            <p class="fr-alert__title">La convention a été résiliée le {{ convention.date_resiliation|date:"j F Y" }}</p>
+
+        </div>
+    </div>
+{% endif %}
 
