--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -717,6 +717,27 @@
                     {% include "conventions/actions/instructeur_notification.html" %}
 
                     {% include "conventions/actions/instructeur_validation.html" %}
+                    {% if convention.display_options.display_is_validated %}
+
+                        <div class="fr-col-md-12  fr-py-5w">
+                            <div role="alert" class="fr-alert fr-alert--success">
+
+                                <p class="fr-alert__title">La convention a été validée le {{ convention.valide_le|date:"j F Y" }}</p>
+                                <p class="fr-alert__title">avec le numéro {{convention.numero}}</p>
+                            </div>
+                        </div>
+                    {% endif %}
+                    {% if convention.display_options.display_is_resiliated %}
+
+                        <div class="fr-col-md-12 fr-py-5w">
+                            <div role="alert" class="fr-alert fr-alert--warning">
+
+                                <p class="fr-alert__title">La convention a été résiliée le {{ convention.date_resiliation|date:"j F Y" }}</p>
+
+                            </div>
+                        </div>
+                    {% endif %}
+
                 </turbo-frame>
 
 
